// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_document should not show the cookie banner when the showCookieBanner attribute is false 1`] = `
<Html
  className="govuk-template app-html-class flexbox no-flexboxtweener"
  lang="en"
>
  <Head
    nonce=""
  />
  <body
    className="govuk-template__body app-body-class"
  >
    <a
      className="govuk-skip-link"
      href="#main-content"
    >
      Skip to main content
    </a>
    <div
      id="js-cookie-banner"
    />
    <Header
      csrfToken=""
      isAuthed={true}
    />
    <Main />
    <NextScript
      nonce=""
    />
    <script
      nonce=""
      src="/scripts/all.js"
    />
    <script
      nonce=""
    >
      window.GOVUKFrontend.initAll()
    </script>
  </body>
</Html>
`;

exports[`_document should render correctly 1`] = `
<Html
  className="govuk-template app-html-class flexbox no-flexboxtweener"
  lang="en"
>
  <Head
    nonce=""
  />
  <body
    className="govuk-template__body app-body-class"
  >
    <a
      className="govuk-skip-link"
      href="#main-content"
    >
      Skip to main content
    </a>
    <div
      id="js-cookie-banner"
    />
    <div
      className="no-js-cookie-banner"
    >
      <Component />
    </div>
    <Header
      csrfToken=""
      isAuthed={true}
    />
    <Main />
    <NextScript
      nonce=""
    />
    <script
      nonce=""
      src="/scripts/all.js"
    />
    <script
      nonce=""
    >
      window.GOVUKFrontend.initAll()
    </script>
  </body>
</Html>
`;
